--- a/www/css/index.css
+++ b/www/css/index.css
@@ -90,7 +90,7 @@ p{
 	/* for 4 tabs each is 25% */
 }
 .li-1-3{
-	width: 33%;	
+	width: 33.333%;	
 	/* for 3 tabs each is 33% */
 }
 .li-1-2{
@@ -181,4 +181,9 @@ background-image: url(../img/contact.svg);
 }
 .hide{
 	display:none;	
+}
+
+
+#home{
+ width:95%;   
 }
